Ändrade några färger

--- a/app/src/main/res/layout/activity_check_button.xml
+++ b/app/src/main/res/layout/activity_check_button.xml
@@ -31,5 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox20" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox20"
+        android:background="@drawable/button_drawable"/>
+
 </android.support.constraint.ConstraintLayout>
